ui/ux virens 소개페이지 링크연결

--- a/index.html
+++ b/index.html
@@ -164,16 +164,18 @@
                                         <h2>VIRENS</h2>
                                         <!-- <p class="brand_name">CREATIVE APP</p> -->
                                         <div class="hashtag">
-                                            <span>#APP design</span>
+                                            <span>#APP Design</span>
                                             <span>#UI/UX</span>
+                                            <span>#Icon Design</span>
+                                            <span>#Logo Design</span>
                                         </div>
                                         <div class="icon_go">
-                                            <a href="#">소개페이지 보러가기<img src="./images/icon/arrow.svg" alt="" target="_blank"></a>
+                                            <a href="https://www.figma.com/proto/bLoVtwhoSaRgz2HOSepcDL/%EB%B9%84%EB%A0%8C%EC%8A%A4-UI%2FUX-%EC%86%8C%EA%B0%9C%ED%8E%98%EC%9D%B4%EC%A7%80?page-id=0%3A1&type=design&node-id=9-337&viewport=1315%2C-610%2C0.07&t=NNYtmDG55mjmUpz5-1&scaling=contain&mode=design" target="_blank">소개페이지 보러가기<img src="./images/icon/arrow.svg" alt=""></a>
                                         </div>
                                         <div class="project_info">
                                             <p>{ 개발 인원 : 3명 (23.11.20 - 12.08) }</p>
                                             <p>{ 담당 업무 : 디자인, 기획 }</p>
-                                            <p>{ 제작 : 메인페이지, 메뉴바, 카테고리, 상세페이지, 브랜드소개 }</p>
+                                            <p>{ 제작 : 메인페이, 메뉴탭, 네비게이션, 구매페이지, LOGO, APP아이콘, 브랜드소개, PPT디자인 }</p>
                                         </div>
                                     </div>
                                 </div>
@@ -523,7 +525,7 @@
                     <p>/</p>
                     <h3>{ 코드로 감성을 그리다 }</h3>
                     <p>안녕하세요<br>사용자들이 편안하고 직관적으로 서비스를 이용할 수 있도록 고민하고<br>사용자 경험을 최우선으로 생각하며<br>매력적인 디자인을 하려 노력하는 개발자 & 디자이너 김은지입니다.</p>
-                    <a href="./images/about/Kakao_id.jpg" target="_blank" >{ PHONE : 010 - 6398 - 7954  /  KAKAO : eunji9352 }</a>
+                    <a href="./images/about/Kakao_id.jpg" target="_blank" onclick="window.open(this.href, 'newWindow', 'width=500, height=680, top=150, left=200'); return false;" >{ PHONE : 010 - 6398 - 7954  /  KAKAO : eunji9352 }</a>
                     <a href="mailto:dmswl7954@gmail.com">{ EMAIL : dmswl7954@gmail.com }</a>
                     <p><img src="./images/about/avatar2.png" alt="" ta></p>
                 </div>
