--- a/index.html
+++ b/index.html
@@ -88,10 +88,10 @@
                         <!-- <h1>P</h1><h1>O</h1><h1>R</h1><h1>T</h1><h1>O</h1><h1>L</h1><h1>I</h1><h1>O</h1> -->
                     </div>
                     <!-- <h3>2024</h3> -->
-                    <p>Web Designer</p>
-                    <p>Package Designer</p>
-                    <p>Visual Designer</p>
-                    <p>Front-end Developer</p>
+                    <p>#Web Designer</p>
+                    <!-- <p>#Visual Designer</p> -->
+                    <p>#Publisher</p>
+                    <p>#Front-end Developer</p>
                     <div class="img_animation">
                         <div class="circle"><img src="./images/intro/obj_logo.png" alt=""></div>
                         <div class="dollar"><img src="./images/intro/obj_dollar.png" alt=""></div>
