--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                             <h1>Team Project</h1>
                             <div class="project project1">
                                 <div class="procject_box box1">
-                                    <div class="project_right"><a href="#"><img src="./images/portfolio/01.png" alt=""></a></div>
+                                    <div class="project_right"><a href="https://yunaweb.pe.kr/marketkurly_frontend24/" target="_blank"><img src="./images/portfolio/01.png" alt=""></a></div>
                                     <div class="project_left">
                                         <h2>MARKET KURLY</h2>
                                         <!-- <p class="brand_name">MARKET KURLY</p> -->
@@ -200,7 +200,7 @@
                             <h1>Project</h1>
                             <div class="project project2">
                                 <div class="procject_box box3">
-                                    <div class="project_right"><a href="#"><img src="./images/portfolio/02.png" alt=""></a></div>
+                                    <div class="project_right"><a href="http://eunz.dothome.co.kr/etude/index.html" target="_blank"><img src="./images/portfolio/02.png" alt=""></a></div>
                                     <div class="project_left">
                                         <h2>ETUDE HOUSE</h2>
                                         <div class="hashtag">
@@ -524,10 +524,10 @@
                     <h2>About</h2>
                     <p>/</p>
                     <h3>{ 코드로 감성을 그리다 }</h3>
-                    <p>안녕하세요<br>사용자들이 편안하고 직관적으로 서비스를 이용할 수 있도록 고민하고<br>사용자 경험을 최우선으로 생각하며<br>매력적인 디자인을 하려 노력하는 개발자 & 디자이너 김은지입니다.</p>
+                    <p>안녕하세요<br>사용자들이 편안하고 직관적으로 서비스를 이용할 수 있도록<br>고민하고 사용자 경험을 최우선으로 생각하며 노력하는<br>개발자 & 디자이너 김은지입니다.</p>
                     <a href="./images/about/Kakao_id.jpg" target="_blank" onclick="window.open(this.href, 'newWindow', 'width=500, height=680, top=150, left=200'); return false;" >{ PHONE : 010 - 6398 - 7954  /  KAKAO : eunji9352 }</a>
                     <a href="mailto:dmswl7954@gmail.com">{ EMAIL : dmswl7954@gmail.com }</a>
-                    <p><img src="./images/about/avatar2.png" alt="" ta></p>
+                    <p><img src="./images/about/avatar2.png" alt=""></p>
                 </div>
                 <div class="pro_right">
                     <h2>Skill</h2>
@@ -578,9 +578,9 @@
                         <span class="en_title">CSS3</span>
                         <!-- <span class="ko_title">씨에스에스</span> -->
                         <div class="text_contents">
-                            <span>* DOM 활용 여러 함수 사용 가능합니다.</span>
-                            <span>* 이벤트 핸들링 및 콜백과 관련된 기술 활용 가능합니다.</span>
-                            <span>* 배열의 기본적 함수 사용 가능합니다.</span>
+                            <span>* 공통 파일(common)을 제작하여 관리할 수 있습니다.</span>
+                            <span>* 반응형 웹사이트를 제작할 수 있습니다.</span>
+                            <span>* 색상, 이미지 크기나 위치, 다양한 배치 방법 등 웹 문서의 디자인 요소를 꾸밀 수 있습니다.</span>
                             <span>* 다양한 최신 트렌드 디자인과 애니메이션을 구성하여 JavaScript와 연동할 수 있는 디자인을 제작할 수 있습니다.</span>
                         </div>
                     </div>
