--- a/index.html
+++ b/index.html
@@ -22,6 +22,16 @@
     <title>김은지 포트폴리오</title>
     <link rel="stylesheet" href="./styles/reset.css">
     <link rel="stylesheet" href="./styles/main.css">
+    <link rel="stylesheet" href="css/swiper-bundle.min.css" />
+    <link href="css/aos.css" rel="stylesheet" />
+    <!-- <script src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=인증코드"></script> -->
+    <script src="js/jquery-1.8.3.min.js"></script>
+    <script src="js/headroom.js"></script>
+    <script src="js/aos.js"></script>
+    <script src="js/gsap.min.js"></script>
+    <script src="js/ScrollTrigger.min.js"></script>
+    <script src="js/swiper-bundle.min.js"></script>
+
 </head>
 <body>
     <header>
@@ -129,7 +139,11 @@
                             <div class="right"><p>& App</p></div>
                         </div>
                         <div class="view_box">
-                            <h1>Team Project</h1>
+                            <h1  
+                            data-aos="fade-right"
+                            data-aos-duration="1000"
+                            data-aos-delay="200"
+                            >Team Project</h1>
                             <div class="project project1">
                                 <div class="procject_box box1">
                                     <div class="project_right"><a href="https://yunaweb.pe.kr/marketkurly_frontend24/" target="_blank"><img src="./images/portfolio/01.png" alt=""></a></div>
@@ -197,7 +211,11 @@
                             <div class="right"><p>it self</p></div>
                         </div>
                         <div class="view_box">
-                            <h1>Project</h1>
+                            <h1
+                            data-aos="fade-right"
+                            data-aos-duration="1000"
+                            data-aos-delay="200"
+                            >Project</h1>
                             <div class="project project2">
                                 <div class="procject_box box3">
                                     <div class="project_right"><a href="http://eunz.dothome.co.kr/etude/index.html" target="_blank"><img src="./images/portfolio/02.png" alt=""></a></div>
@@ -351,7 +369,11 @@
                         <div class="swiper-pagination"></div>
                     </div>
                     <!-- Swiper ** end -->
-                    <div class="designer_comment">
+                    <div class="designer_comment"
+                    data-aos="fade-up"
+                    data-aos-duration="1000"
+                    data-aos-delay="200"
+                    >
                         <h3>click me ↑</h3>
                         <h3>{ product page }</h3>
                         <p>본인이 100% 작업한 상세페이지입니다.</p>
@@ -515,7 +537,11 @@
                         <a href="./package_05.html" target="_blank"><img src="./images/portfolio/package/05.jpg" alt=""></a>
                         <a href="./package_06.html" target="_blank"><img src="./images/portfolio/package/06.jpg" alt=""></a>
                     </div>
-                    <div class="package_comment"><h2>Package Design.</h2></div>
+                    <div class="package_comment"><h2
+                        data-aos="fade-left"
+                        data-aos-duration="1000"
+                        data-aos-delay="200"
+                        >Package Design.</h2></div>
                 </div>
             </div>
             <!-- profile / 컨테이너8번 -->
@@ -523,8 +549,16 @@
                 <div class="pro_left">
                     <h2>About</h2>
                     <p>/</p>
-                    <h3>{ 코드로 감성을 그리다 }</h3>
-                    <p>안녕하세요<br>사용자들이 편안하고 직관적으로 서비스를 이용할 수 있도록<br>고민하고 사용자 경험을 최우선으로 생각하며 노력하는<br>개발자 & 디자이너 김은지입니다.</p>
+                    <h3
+                    data-aos="fade-up"
+                    data-aos-duration="1000"
+                    data-aos-delay="200"
+                    >{ 코드로 감성을 그리다 }</h3>
+                    <p
+                    data-aos="fade-up"
+                    data-aos-duration="1000"
+                    data-aos-delay="400"
+                    >안녕하세요<br>사용자들이 편안하고 직관적으로 서비스를 이용할 수 있도록<br>고민하고 사용자 경험을 최우선으로 생각하며 노력하는<br>개발자 & 디자이너 김은지입니다.</p>
                     <a href="./images/about/Kakao_id.jpg" target="_blank" onclick="window.open(this.href, 'newWindow', 'width=500, height=680, top=150, left=200'); return false;" >{ PHONE : 010 - 6398 - 7954  /  KAKAO : eunji9352 }</a>
                     <a href="mailto:dmswl7954@gmail.com">{ EMAIL : dmswl7954@gmail.com }</a>
                     <p><img src="./images/about/avatar2.png" alt=""></p>
@@ -556,7 +590,12 @@
                 <div class="img_box">
                     <img src="./images/about/ttaum.png" alt="">
                 </div>
-                <p>{ 귀한 시간으로 포트폴리오를 확인해 주셔서 감사합니다. }</p>
+                <p
+                data-aos="fade-up"
+                data-aos-easing="linear"
+                data-aos-duration="1000"
+                data-aos-delay="300"
+                >{ 귀한 시간으로 포트폴리오를 확인해 주셔서 감사합니다. }</p>
                 <!-- <h2>Thank You</h2> -->
                 <div class="box_text_animation">
                     <h2>T</h2><h2>h</h2><h2>a</h2><h2>n</h2><h2>k</h2><h2>Y</h2><h2>o</h2><h2>u</h2>
@@ -721,7 +760,7 @@
             effect: "coverflow",
             loop: true,
             grabCursor: true,
-            autoplay:{delay:1100,},
+            autoplay:{delay:2000,},
             slidesPerView:4, //슬라이드 한번에 4개씩 보이기
             spaceBetween:50, //슬라이드 여백
             centeredSlides:true, //슬라이드의 기준을 가운데부터 시작하도록 설정하기
@@ -741,7 +780,7 @@
             effect: "cube",
             grabCursor: true,
             loop: true,
-            autoplay:{delay:2000,},
+            autoplay:{delay:3000,},
             cubeEffect: {
                 shadow: true,
                 slideShadows: true,
@@ -755,7 +794,7 @@
         /*   Initialize Swiper -- portfolio_viral   */
         let swiper3 = new Swiper(".viral .swiper3", {
             slidesPerView: 3,
-            autoplay:{delay:2000,},
+            autoplay:{delay:3000,},
             grid: {
                 rows: 3,
             },
@@ -786,21 +825,24 @@
         let page = 0; //스크롤값 0, 초기값
         
         //스크롤을 아래로 내릴 때 
-        window.addEventListener('wheel',(e)=>{ 
-            console.log(e.deltaY) 
-            e.preventDefault() 
-            autoplay:{delay:2000}
-            if(e.deltaY > 0){page++} 
-            if(e.deltaY < 0){page--} 
-            if(page > 8){ page = 8} 
-            if(page < 0){page = 0}
-            wrap.style.top = `${page*-100}vh` 
-            console.log(`${page*-100}vh`) 
-        },{passive:false}) 
+        // window.addEventListener('wheel',(e)=>{ 
+        //     console.log(e.deltaY) 
+        //     e.preventDefault() 
+        //     autoplay:{delay:2000}
+        //     if(e.deltaY > 0){page++} 
+        //     if(e.deltaY < 0){page--} 
+        //     if(page > 8){ page = 8} 
+        //     if(page < 0){page = 0}
+        //     wrap.style.top = `${page*-100}vh` 
+        //     console.log(`${page*-100}vh`) 
+        // },{passive:false}) 
 
-        setTimeout(function(){ //새로고침시 상단으로 이동
-            window.scrollTo(0, 0)
-        }, 100)
+        // setTimeout(function(){ //새로고침시 상단으로 이동
+        //     window.scrollTo(0, 0)
+        // }, 100)
     </script>
+        <script>
+            AOS.init();
+        </script>
 </body>
 </html>  
