포트폴리오 영역 추가 (반응형 홈페이지)

--- a/index.html
+++ b/index.html
@@ -121,6 +121,94 @@
                     </div>
                 </div> -->
             </div>
+            <section class="main_homepage_info">
+                <div class="main_homepage">
+                    <div class="main_home_text">
+                      <div class="main_homep_t">
+                        <h2>컨텐츠 제작</h2>
+                      </div>
+                      <div class="main_homep_s">
+                        <h3>Homepage</h3>
+                        <h4>반응형 홈페이지 포트폴리오</h4>
+                        <h5>
+                          모바일 기기를 이용한 홈페이지 방문이 이미 PC 이용자를 넘어서고
+                          있습니다.<br />
+                          모바일 기기는 화면 크기가 작고 해상도가 매우 다양하기 때문에
+                          고객의 사용성을 높이기 위해서는 반응형 홈페이지가
+                          필요합니다.<br />
+                          <br />
+                          모바일 홈페이지, 반응형 홈페이지 등 모바일 환경을 지원하는
+                          홈페이지를 제작할 수 있습니다.
+                        </h5>
+                        <p>
+                          홈페이지 · 반응형홈페이지 · 모바일홈페이지 · 마케팅 포트폴리오
+                        </p>
+                      </div>
+                    </div>
+                    <div class="main_homepage_area">
+                      <div class="homepage_thumb">
+                        <a href="http://ysjinjunghan.com/" class="homepage_img">
+                          <!-- <img src="/img/main_homepage_img01.jpg" alt="" /> -->
+                          <img src="/img/main_subject_list01.png" alt="" />
+                        </a>
+                        <div class="homepage_info">
+                          <div class="homep_left">
+                            <h3>안양바른플러스치과</h3>
+                            <p>Website</p>
+                          </div>
+                          <div class="homep_right">
+                            <img src="/img/main_homep_logo.svg" alt="" />
+                          </div>
+                        </div>
+                      </div>
+                      <div class="homepage_thumb">
+                        <a href="http://ysjinjunghan.com/" class="homepage_img">
+                          <!-- <img src="/img/main_homepage_img01.jpg" alt="" /> -->
+                          <img src="/img/main_subject_list01.png" alt="" />
+                        </a>
+                        <div class="homepage_info">
+                          <div class="homep_left">
+                            <h3>안양바른플러스치과</h3>
+                            <p>Website</p>
+                          </div>
+                          <div class="homep_right">
+                            <img src="/img/main_homep_logo.svg" alt="" />
+                          </div>
+                        </div>
+                      </div>
+                      <div class="homepage_thumb">
+                        <a href="http://ysjinjunghan.com/" class="homepage_img">
+                          <!-- <img src="/img/main_homepage_img01.jpg" alt="" /> -->
+                          <img src="/img/main_subject_list01.png" alt="" />
+                        </a>
+                        <div class="homepage_info">
+                          <div class="homep_left">
+                            <h3>안양바른플러스치과</h3>
+                            <p>Website</p>
+                          </div>
+                          <div class="homep_right">
+                            <img src="/img/main_homep_logo.svg" alt="" />
+                          </div>
+                        </div>
+                      </div>
+                      <div class="homepage_thumb">
+                        <a href="http://ysjinjunghan.com/" class="homepage_img">
+                          <!-- <img src="/img/main_homepage_img01.jpg" alt="" /> -->
+                          <img src="/img/main_subject_list01.png" alt="" />
+                        </a>
+                        <div class="homepage_info">
+                          <div class="homep_left">
+                            <h3>안양바른플러스치과</h3>
+                            <p>Website</p>
+                          </div>
+                          <div class="homep_right">
+                            <img src="/img/main_homep_logo.svg" alt="" />
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+            </section>
             <!-- portfolio ** developer -->
             <div class="port_developer nav_tab menu_tab">
                 <div class="developer_container">
