--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0,  minimum-scale=1, maximum-scale=1">
-    <meta name="description" content="2024년 | 프론트엔드 신입 | 웹디자이너 경력 | 김은지 포트폴리오입니다.">
+    <meta name="description" content="2024년 | 퍼블리셔 경력 | 김은지 포트폴리오입니다.">
     <!-- <meta name="keywords" content="프론트엔드, frontend,html,css,javascript"> -->
     <!-- favicon -->
     <link rel="shortcut icon" href="./images/icon/favicon.png" type="image/x-icon">
@@ -19,7 +19,7 @@
     <!-- 제이쿼리 풀페이지 필수연결 -->
     <link rel="stylesheet" href="./fullpage/jquery.fullPage.css">
     <!-- link -->
-    <title>김은지 포트폴리오</title>
+    <title>eunji | 김은지 포트폴리오</title>
     <link rel="stylesheet" href="./styles/reset.css">
     <link rel="stylesheet" href="./styles/main.css">
     <link rel="stylesheet" href="css/swiper-bundle.min.css" />
@@ -52,7 +52,7 @@
         </div>
         <nav>
             <a href="#">MAIN</a>
-            <a href="#">PORTFOLIO<span>(front-end)</span></a>
+            <a href="#">PORTFOLIO<span>(Publisher)</span></a>
             <a href="#">PORTFOLIO<span>(designer)</span></a>
             <a href="#">ABOUT</a>
         </nav>
@@ -79,8 +79,8 @@
                 </div>
                 <div class="text_box">
                     <a href="#">INTRO</a>
-                    <a href="#">PORTFOLIO<span>(front-end)</span></a>
-                    <a href="#">PORTFOLIO<span>(designer)</span></a>
+                    <a href="#">PORTFOLIO<span>(Publisher)</span></a>
+                    <a href="#">PORTFOLIO<span>(Designer)</span></a>
                     <a href="#">PROFILE</a>
                     <a href="#">ABOUT</a>
                 </div>
@@ -98,10 +98,10 @@
                         <!-- <h1>P</h1><h1>O</h1><h1>R</h1><h1>T</h1><h1>O</h1><h1>L</h1><h1>I</h1><h1>O</h1> -->
                     </div>
                     <!-- <h3>2024</h3> -->
-                    <p>#Web Designer</p>
-                    <!-- <p>#Visual Designer</p> -->
                     <p>#Publisher</p>
+                    <!-- <p>#Visual Designer</p> -->
                     <p>#Front-end Developer</p>
+                    <p>#Web Designer</p>
                     <div class="img_animation">
                         <div class="circle"><img src="./images/intro/obj_logo.png" alt=""></div>
                         <div class="dollar"><img src="./images/intro/obj_dollar.png" alt=""></div>
@@ -121,65 +121,82 @@
                     </div>
                 </div> -->
             </div>
-            <section class="main_homepage_info">
-                <div class="main_homepage">
+            <section class="main_homepage_info menu_tab">
+                <div class="main_homepage nav_tab">
                     <div class="main_home_text">
                       <div class="main_homep_t">
-                        <h2>컨텐츠 제작</h2>
+                        <h2
+                        data-aos="fade-right"
+                        data-aos-delay="200"
+                        data-aos-duration="1000"
+                        >컨텐츠 제작</h2>
                       </div>
                       <div class="main_homep_s">
-                        <h3>Homepage</h3>
-                        <h4>반응형 홈페이지 포트폴리오</h4>
-                        <h5>
+                        <h3
+                        data-aos="fade-left"
+                        data-aos-delay="200"
+                        data-aos-duration="1000"
+                        >Homepage</h3>
+                        <h4
+                        data-aos="fade-left"
+                        data-aos-delay="200"
+                        data-aos-duration="1000"
+                        >반응형 홈페이지</h4>
+                        <h5
+                        data-aos="fade-left"
+                        data-aos-delay="400"
+                        data-aos-duration="1000">
                           모바일 기기를 이용한 홈페이지 방문이 이미 PC 이용자를 넘어서고
                           있습니다.<br />
-                          모바일 기기는 화면 크기가 작고 해상도가 매우 다양하기 때문에
+                          모바일 기기는 화면 크기가 작고 해상도가 매우 다양하기 때문에<br />
                           고객의 사용성을 높이기 위해서는 반응형 홈페이지가
                           필요합니다.<br />
-                          <br />
-                          모바일 홈페이지, 반응형 홈페이지 등 모바일 환경을 지원하는
-                          홈페이지를 제작할 수 있습니다.
+                          <em>마케팅 회사를 다니며 직접 작업한 사이트 입니다. <br>모바일 홈페이지, 반응형 홈페이지 등 모바일 환경을 지원하는
+                          홈페이지를 제작할 수 있습니다.</em>
                         </h5>
                         <p>
-                          홈페이지 · 반응형홈페이지 · 모바일홈페이지 · 마케팅 포트폴리오
+                          | 홈페이지 · 반응형홈페이지 · 모바일홈페이지 · 마케팅 포트폴리오 |
                         </p>
                       </div>
                     </div>
-                    <div class="main_homepage_area">
+                    <div
+                    data-aos="fade-up"
+                    data-aos-delay="200"
+                    data-aos-duration="1000"
+                    class="main_homepage_area">
                       <div class="homepage_thumb">
-                        <a href="http://ysjinjunghan.com/" class="homepage_img">
-                          <!-- <img src="/img/main_homepage_img01.jpg" alt="" /> -->
-                          <img src="/img/main_subject_list01.png" alt="" />
+                        <a href="http://ysjinjunghan.com/" class="homepage_img" target="_blank">
+                          <img src="/images/group_d/pp_aria_page_thumb_01.jpg" alt="청주으뜸치과" />
                         </a>
                         <div class="homepage_info">
                           <div class="homep_left">
-                            <h3>안양바른플러스치과</h3>
+                            <h3>청주으뜸치과</h3>
                             <p>Website</p>
                           </div>
                           <div class="homep_right">
-                            <img src="/img/main_homep_logo.svg" alt="" />
+                            <img src="/images/group_d/main_homep_logo_01.svg" alt="" />
                           </div>
                         </div>
                       </div>
                       <div class="homepage_thumb">
-                        <a href="http://ysjinjunghan.com/" class="homepage_img">
+                        <a href="http://ysjinjunghan.com/" target="_blank" class="homepage_img">
                           <!-- <img src="/img/main_homepage_img01.jpg" alt="" /> -->
-                          <img src="/img/main_subject_list01.png" alt="" />
+                          <img src="/images/group_d/pp_aria_page_thumb_01.jpg" alt="연세진정한치과" />
                         </a>
                         <div class="homepage_info">
                           <div class="homep_left">
-                            <h3>안양바른플러스치과</h3>
+                            <h3>연세진정한치과</h3>
                             <p>Website</p>
                           </div>
                           <div class="homep_right">
-                            <img src="/img/main_homep_logo.svg" alt="" />
+                            <img src="/images/group_d/main_homep_logo_01.svg" alt="" />
                           </div>
                         </div>
                       </div>
                       <div class="homepage_thumb">
-                        <a href="http://ysjinjunghan.com/" class="homepage_img">
+                        <a href="http://ysjinjunghan.com/" target="_blank" class="homepage_img">
                           <!-- <img src="/img/main_homepage_img01.jpg" alt="" /> -->
-                          <img src="/img/main_subject_list01.png" alt="" />
+                          <img src="/images/group_d/pp_aria_page_thumb_01.jpg" alt="안양바른플러스치과" />
                         </a>
                         <div class="homepage_info">
                           <div class="homep_left">
@@ -187,22 +204,22 @@
                             <p>Website</p>
                           </div>
                           <div class="homep_right">
-                            <img src="/img/main_homep_logo.svg" alt="" />
+                            <img src="/images/group_d/main_homep_logo_01.svg" alt="" />
                           </div>
                         </div>
                       </div>
                       <div class="homepage_thumb">
-                        <a href="http://ysjinjunghan.com/" class="homepage_img">
+                        <a href="http://ysjinjunghan.com/" target="_blank" class="homepage_img">
                           <!-- <img src="/img/main_homepage_img01.jpg" alt="" /> -->
-                          <img src="/img/main_subject_list01.png" alt="" />
+                          <img src="/images/group_d/pp_aria_page_thumb_01.jpg" alt="타투이스트" />
                         </a>
                         <div class="homepage_info">
                           <div class="homep_left">
-                            <h3>안양바른플러스치과</h3>
+                            <h3>타투이스트 사이트</h3>
                             <p>Website</p>
                           </div>
                           <div class="homep_right">
-                            <img src="/img/main_homep_logo.svg" alt="" />
+                            <img src="/images/group_d/main_homep_logo_01.svg" alt="" />
                           </div>
                         </div>
                       </div>
@@ -210,7 +227,7 @@
                   </div>
             </section>
             <!-- portfolio ** developer -->
-            <div class="port_developer nav_tab menu_tab">
+            <div class="port_developer">
                 <div class="developer_container">
                     <!-- 팀프로젝트 소개 / 컨테이너2 -->
                     <div class="area view view_top section">
@@ -660,10 +677,10 @@
                         <a href="#"><img src="./images/skill_icon/03.jpg" alt=""></a>
                         <a href="#"><img src="./images/skill_icon/04.jpg" alt=""></a>
                         <a href="#"><img src="./images/skill_icon/05.jpg" alt=""></a>
-                        <a href="#"><img src="./images/skill_icon/06.jpg" alt=""></a>
+                        <a href="#"><img src="./images/skill_icon/09.jpg" alt=""></a>
                         <a href="#"><img src="./images/skill_icon/07.jpg" alt=""></a>
                         <a href="#"><img src="./images/skill_icon/08.jpg" alt=""></a>
-                        <a href="#"><img src="./images/skill_icon/09.jpg" alt=""></a>
+                        <a href="#"><img src="./images/skill_icon/06.jpg" alt=""></a>
                         <a href="#"><img src="./images/skill_icon/10.jpg" alt=""></a>
                         <a href="#"><img src="./images/skill_icon/11.jpg" alt=""></a>
                         <a href="#"><img src="./images/skill_icon/12.jpg" alt=""></a>
@@ -743,13 +760,15 @@
                             <span>* 간단한 캐릭터 디자인, 로고 디자인 등 깔끔하고 돋보이는 백터 디자인을 제작할 수 있습니다.</span>
                         </div>
                     </div>
-                    <div class="skill_con_react_06 display_none">
-                        <img src="./images/skill_icon/06.jpg" alt="">
-                        <span class="en_title">React</span>
-                        <span class="ko_title">리액트</span>
+                    <div class="skill_con_php_06 display_none">
+                        <img src="./images/skill_icon/09.jpg" alt="">
+                        <span class="en_title">PHP</span>
+                        <!-- <span class="ko_title">피에이치피</span> -->
                         <div class="text_contents">
-                            <span>* 싱글 페이지나 UI/UX 개발에 활용 가능합니다.</span>
-                            <span>* 계속 공부하며 배울 예정입니다.</span>
+                            <span>* 웹 서버에서 실행되어 동적인 웹 페이지를 만들 수 있습니다.</span>
+                            <span>* 다양한 데이터베이스와 연동하여 데이터를 관리할 수 있습니다.</span>
+                            <span>* php include 명령어를 이용한 공통 페이지 관리를 할 수 있습니다.</span>
+                            <span>* 그누보드, 카카오맵, FTP, Netlify, plugin 등 다양한 웹 관련도구를 활용한 웹 사이트 제작이 가능합니다.</span>
                         </div>
                     </div>
                     <div class="skill_con_figma_07 display_none">
@@ -772,15 +791,13 @@
                             <span>* 코드 재사용 및 자동화 기능을 통해 개발 속도를 높일 수 있습니다.</span>
                         </div>
                     </div>
-                    <div class="skill_con_php_09 display_none">
-                        <img src="./images/skill_icon/09.jpg" alt="">
-                        <span class="en_title">PHP</span>
-                        <!-- <span class="ko_title">피에이치피</span> -->
+                    <div class="skill_con_react_09 display_none">
+                        <img src="./images/skill_icon/06.jpg" alt="">
+                        <span class="en_title">React</span>
+                        <span class="ko_title">리액트</span>
                         <div class="text_contents">
-                            <span>* 웹 서버에서 실행되어 동적인 웹 페이지를 만들 수 있습니다.</span>
-                            <span>* 다양한 데이터베이스와 연동하여 데이터를 관리할 수 있습니다.</span>
-                            <span>* php include 명령어를 이용한 공통 페이지 관리를 할 수 있습니다.</span>
-                            <span>* 그누보드, 카카오맵, FTP, Netlify, plugin 등 다양한 웹 관련도구를 활용한 웹 사이트 제작이 가능합니다.</span>
+                            <span>* 싱글 페이지나 UI/UX 개발에 활용 가능합니다.</span>
+                            <span>* 계속 공부하며 배울 예정입니다.</span>
                         </div>
                     </div>
                     <div class="skill_con_api_10 display_none">
