홈페이지 소개페이지 추가

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <nav>
             <a href="#">MAIN</a>
             <a href="#">PORTFOLIO<span>(Publisher)</span></a>
-            <a href="#">PORTFOLIO<span>(designer)</span></a>
+            <a href="#">PORTFOLIO<span>(Designer)</span></a>
             <a href="#">ABOUT</a>
         </nav>
     </header>
@@ -165,7 +165,7 @@
                     data-aos-duration="1000"
                     class="main_homepage_area">
                       <div class="homepage_thumb">
-                        <a href="http://ysjinjunghan.com/" class="homepage_img" target="_blank">
+                        <a href="/homepage01.html" class="homepage_img" target="_blank">
                           <img src="/images/group_d/pp_aria_page_thumb_01.jpg" alt="청주으뜸치과" />
                         </a>
                         <div class="homepage_info">
@@ -189,12 +189,12 @@
                             <p>Website</p>
                           </div>
                           <div class="homep_right">
-                            <img src="/images/group_d/main_homep_logo_01.svg" alt="" />
+                            <img src="/images/group_d/main_homep_logo_02.svg" alt="" />
                           </div>
                         </div>
                       </div>
                       <div class="homepage_thumb">
-                        <a href="http://ysjinjunghan.com/" target="_blank" class="homepage_img">
+                        <a href="http://bplusdent.com/" target="_blank" class="homepage_img">
                           <!-- <img src="/img/main_homepage_img01.jpg" alt="" /> -->
                           <img src="/images/group_d/pp_aria_page_thumb_01.jpg" alt="안양바른플러스치과" />
                         </a>
@@ -204,12 +204,12 @@
                             <p>Website</p>
                           </div>
                           <div class="homep_right">
-                            <img src="/images/group_d/main_homep_logo_01.svg" alt="" />
+                            <img src="/images/group_d/main_homep_logo_03.svg" alt="" />
                           </div>
                         </div>
                       </div>
                       <div class="homepage_thumb">
-                        <a href="http://ysjinjunghan.com/" target="_blank" class="homepage_img">
+                        <a href="#" target="_blank" class="homepage_img">
                           <!-- <img src="/img/main_homepage_img01.jpg" alt="" /> -->
                           <img src="/images/group_d/pp_aria_page_thumb_01.jpg" alt="타투이스트" />
                         </a>
