--- a/homepage01.html
+++ b/homepage01.html
@@ -43,7 +43,7 @@
           </p>
         </div>
         <div class="home_img">
-          <img src="/images/group_d//homepage_design01.png" alt="청주으뜸치과 홈페이지" />
+          <img src="/images/group_d//homepage_design01_.jpg" alt="청주으뜸치과 홈페이지" />
         </div>
       </div>
     </section>
