그룹디 사이트 추가

--- a/index.html
+++ b/index.html
@@ -209,13 +209,13 @@
                         </div>
                       </div>
                       <div class="homepage_thumb">
-                        <a href="#" target="_blank" class="homepage_img">
+                        <a href="#" target="_blank" class="homepage_img home_alr">
                           <!-- <img src="/img/main_homepage_img01.jpg" alt="" /> -->
                           <img src="/images/group_d/pp_aria_page_thumb_04.jpg" alt="타투이스트" />
                         </a>
                         <div class="homepage_info">
                           <div class="homep_left">
-                            <h3>타투이스트 사이트</h3>
+                            <h3>타투이스트 사이트 (준비중)</h3>
                             <p>Website</p>
                           </div>
                           <div class="homep_right">
