--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <span></span>
         <span></span>
     </div>
-    <main>
+    <main id="">
         <div class="arrow_top">
             <button type="button" id="go_to_top"><img src="./images/icon/arrow_top_bk.svg" alt="" ></button>
         </div>
@@ -121,6 +121,7 @@
                     </div>
                 </div> -->
             </div>
+            <!-- 홈페이지 제작 소개 -->
             <section class="main_homepage_info menu_tab">
                 <div class="main_homepage nav_tab">
                     <div class="main_home_text">
@@ -225,6 +226,55 @@
                       </div>
                     </div>
                   </div>
+            </section>
+            <!-- 광고이미지 소개 -->
+            <section class="main_naver_place">
+                <div class="place_area">
+                    <div class="main_home_text">
+                        <div class="main_homep_t">
+                            <h2
+                            data-aos="fade-right"
+                            data-aos-delay="200"
+                            data-aos-duration="1000"
+                            >광고이미지 제작</h2>
+                        </div>
+                        <div class="main_homep_s">
+                            <h3
+                            data-aos="fade-left"
+                            data-aos-delay="200"
+                            data-aos-duration="1000"
+                            >NAVER Smart Place</h3>
+                            <h4
+                            data-aos="fade-left"
+                            data-aos-delay="200"
+                            data-aos-duration="1000"
+                            >네이버 스마트플레이스 이미지</h4>
+                            <h5
+                            data-aos="fade-left"
+                            data-aos-delay="400"
+                            data-aos-duration="1000">
+                                <em>네이버 스마트플레이스란?</em><br />
+                                네이버 스마트플레이스는 사업주 분들이<br />
+                                네이버에 업체를 효과적으로 홍보할 수 있도록 도움을 주는 서비스입니다.<br />
+                                네이버 스마트플레스에서 업체정보를 등록하면 네이버 내 여러 서비스<br />
+                                (통합검색, 지도, 플레이스 정보 등)에 업체 정보가 노출됩니다.
+                            </h5>
+                            <p>
+                                | 광고이미지 · 네이버플레이스 · 바이럴이미지 · 마케팅 포트폴리오 |
+                            </p>
+                        </div>
+                    </div>
+                    <div class="main_place_img">
+                        <a href="place_01.html"><img src="/images/group_d/001.jpg" alt="서울훈훈한치과"></a>
+                        <a href="place_02.html"><img src="/images/group_d/002.jpg" alt="서울쏙쏙치과"></a>
+                        <a href="place_03.html"><img src="/images/group_d/003.jpg" alt="청주으뜸치과"></a>
+                        <a href="place_04.html"><img src="/images/group_d/004.jpg" alt="연세365감동치과"></a>
+                        <a href="place_05.html"><img src="/images/group_d/005.jpg" alt="연세바로세움치과"></a>
+                        <a href="place_06.html"><img src="/images/group_d/006.jpg" alt="월배예모아치과"></a>
+                        <a href="place_07.html"><img src="/images/group_d/007.jpg" alt="연세일등치과"></a>
+                        <a href="place_08.html"><img src="/images/group_d/008.jpg" alt="안양바른플러스"></a>
+                    </div>
+                </div>
             </section>
             <!-- portfolio ** developer -->
             <div class="port_developer">
@@ -370,6 +420,25 @@
                     </div>
                 </div> 
             </div>
+            
+            <!-- 팝업이미지 소개 -->
+            <section class="groupd_pop_img">
+                <h2>POP Design</h2>
+                <div class="popup_area">
+                    <img src="/images/group_d/pop_001.jpg" alt="1">
+                    <img src="/images/group_d/pop_002.jpg" alt="2">
+                    <img src="/images/group_d/pop_003.jpg" alt="3">
+                    <img src="/images/group_d/pop_004.jpg" alt="4">
+                    <img src="/images/group_d/pop_005.jpg" alt="5">
+                    <img src="/images/group_d/pop_006.jpg" alt="6">
+                    <img src="/images/group_d/pop_007.jpg" alt="7">
+                    <img src="/images/group_d/pop_008.jpg" alt="8">
+                    <img src="/images/group_d/pop_009.jpg" alt="9">
+                    <img src="/images/group_d/pop_010.jpg" alt="10">
+                    <img src="/images/group_d/pop_011.jpg" alt="11">
+                    <img src="/images/group_d/pop_012.jpg" alt="12">
+                </div>
+            </section>
             <!-- portfolio ** designer -->
             <div class="port_designer nav_tab menu_tab">
                 <!-- 상세페이지 / 컨테이너4 -->
@@ -653,7 +722,7 @@
             <div class="area profile section nav_tab menu_tab">
                 <div class="pro_left">
                     <h2>About</h2>
-                    <p>/</p>
+                    <p></p>
                     <h3
                     data-aos="fade-up"
                     data-aos-duration="1000"
@@ -663,7 +732,14 @@
                     data-aos="fade-up"
                     data-aos-duration="1000"
                     data-aos-delay="400"
-                    >안녕하세요<br>사용자들이 편안하고 직관적으로 서비스를 이용할 수 있도록<br>고민하고 사용자 경험을 최우선으로 생각하며 노력하는<br>개발자 & 디자이너 김은지입니다.</p>
+                    >안녕하세요. 사용자들이 편안게 직관적으로 서비스를 이용할 수 있도록 고민하고<br>
+                    사용자 경험을 최우선으로 생각하며 노력하는 웹퍼블리셔 김은지입니다.<br>
+                    <em>
+                        · 카페24호스팅 구매후 FTP를 이용해 php파일을 활용하여 제작 가능합니다.<br>
+                        · 네이버지도 API, AOS 애니메이션 기능등을 활용하여 동적인 홈페이지 구현이 가능합니다.<br>
+                        · 피그마, GIT을 활용하여 협업이 가능합니다.<br>
+                    </em>
+                    </p>
                     <a href="./images/about/Kakao_id.jpg" target="_blank" onclick="window.open(this.href, 'newWindow', 'width=500, height=680, top=150, left=200'); return false;" >{ PHONE : 010 - 6398 - 7954  /  KAKAO : eunji9352 }</a>
                     <a href="mailto:dmswl7954@gmail.com">{ EMAIL : dmswl7954@gmail.com }</a>
                     <p><img src="./images/about/avatar2.png" alt=""></p>
@@ -949,5 +1025,32 @@
         <script>
             AOS.init();
         </script>
+        <script>
+            $(document).ready(function () {
+                $('#fullpage').fullpage({
+                    licenseKey: 'OPEN-SOURCE-GPLV3-LICENSE',
+                    navigation: true,
+                    navigationPosition: 'left',
+                    autoScrolling: true,
+                    scrollHorizontally: true,
+                    fitToSection: true,
+                    fitToSectionDelay: 1000,
+                    animateAnchor: true,
+                });
+
+                // #goToTopBtn 클릭 시 첫 번째 페이지로 이동
+                $('#goToTopBtn').click(function (e) {
+                    e.preventDefault();
+                    $.fn.fullpage.moveTo(1);
+                });
+            });
+        </script>
+        <script>
+            $(function () {
+                $('.quick_menu_btn').click(function () {
+                    $('.quick_menu_con').toggleClass('active');
+                });
+            }); //E;
+        </script>
 </body>
-</html>  
+</html>
