띄어쓰기 수정

--- a/index.html
+++ b/index.html
@@ -735,7 +735,7 @@
                     >안녕하세요. 사용자들이 편안게 직관적으로 서비스를 이용할 수 있도록 고민하고<br>
                     사용자 경험을 최우선으로 생각하며 노력하는 웹퍼블리셔 김은지입니다.<br>
                     <em>
-                        · 카페24호스팅 구매후 FTP를 이용해 php파일을 활용하여 제작 가능합니다.<br>
+                        · 카페24 호스팅 구매후 FTP를 이용해 php파일을 활용하여 홈페이지 제작 가능합니다.<br>
                         · 네이버지도 API, AOS 애니메이션 기능등을 활용하여 동적인 홈페이지 구현이 가능합니다.<br>
                         · 피그마, GIT을 활용하여 협업이 가능합니다.<br>
                     </em>
